# peppy-VLP

./: README.md  Specification.md  implementation plan.md  pyproject.toml  requirements.txt
.github/skills/tech-review/: SKILL.md
tests/: test_bitmask.py  test_cache.py  test_constants.py  test_handshake.py  test_image_processor.py  test_packet.py  test_qr_renderer.py  test_receiver.py  test_sender.py  test_session.py
vlp/: __init__.py  __main__.py  bitmask.py  cache.py  cli.py  config.py  constants.py  display.py  exceptions.py  handshake.py  image_processor.py  packet.py  qr_renderer.py  qr_scanner.py  receiver.py  sender.py  session.py
