[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlp"
version = "1.0.0"
description = "Visual Link Protocol — optical file transfer via QR codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "zxing-cpp>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyzbar>=0.1.9",
]

[project.scripts]
vlp = "vlp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vlp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["vlp"]
omit = ["tests/*"]
